1.修改主页地址

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "bugs": {
     "url": "https://github.com/weijuer/w-select/issues"
   },
-  "homepage": "https://github.com/weijuer/w-select#readme",
+  "homepage": "https://weijuer.github.io/w-select/",
   "author": "Weijuer",
   "license": "MIT"
 }
